Added functions for parse tree to JSON convert

--- a/priv/www/Jit/css/base.css
+++ b/priv/www/Jit/css/base.css
@@ -34,15 +34,15 @@ a {
     position:relative;
 }
 
-#left-container, 
-#right-container, 
-#center-container {
-    height:600px;
+#json-container, 
+#banner-container, 
+#tree-container {
+    width:100%;
     position:absolute;
     top:0;
 }
 
-#left-container, #right-container {
+#json-container, #banner-container {
     color:#686c70;
     text-align: left;
     overflow: auto;
@@ -50,26 +50,21 @@ a {
     background-repeat:no-repeat;
 }
 
-#left-container {
+#json-container {
     left:0;
-    width: 410px;
-    
+    height:300px;
 }
 
-#right-container {
+#banner-container {
     right:0;
-    width: 10%;
+    top:300px;
 }
 
-#right-container h4{
-    text-indent:8px;
-}
-
-#center-container {
-    width:600px;
-    left:577px;
-    background-color:#1a1a1a;
+#tree-container {
+    background-color:#1f1f1f;
     color:#ccc;
+    top:301px;
+    height:900px;
 }
 
 .text {
@@ -93,8 +88,8 @@ a {
 
 #infovis {
     position:relative;
-    width:600px;
-    height:600px;
+    width:100%;
+    height:900px;
     margin:auto;
     overflow:hidden;
 }
