bg color changed to white

--- a/priv/www/Jit/css/base.css
+++ b/priv/www/Jit/css/base.css
@@ -61,7 +61,7 @@ a {
 }
 
 #tree-container {
-    background-color:#1f1f1f;
+    background-color:#ffffff;
     color:#ccc;
     top:301px;
     height:900px;
